--- a/twitter.ipynb
+++ b/twitter.ipynb
@@ -161,7 +161,7 @@
       },
       "source": [
         "# Our search string\n",
-        "queryString = \"coding\"\n",
+        "queryString = \"cinta\"\n",
         "\n",
         "# Perform the search\n",
         "matchingTweets = api.search(queryString)\n",
@@ -298,7 +298,7 @@
       },
       "source": [
         "# Lets find only media or links about earthquakes\n",
-        "queryString = \"SEHUN (filter:media OR filter:links)\"\n",
+        "queryString = \"CINTA (filter:media OR filter:links)\"\n",
         "\n",
         "# How many tweets should we fetch? Upper limit is 1,500\n",
         "maxToReturn = 100\n",
